# whymove

./: .gitignore  cli.py  pyproject.toml
scripts/: download_games.py  extract_features.py  fetch_games.py  generate_labels.py  train_model.py
src/whymove/: cli.py  container.py  models.py  pipeline.py
src/whymove/api/: app.py  routes.py  schemas.py
src/whymove/classifier/: labels.py  model.py  training.py
src/whymove/engine/: base.py  factory.py  lc0_engine.py  stockfish_engine.py
src/whymove/explainer/: claude_client.py  prompts.py
src/whymove/features/: board_utils.py  extractor.py  tactical.py  vectorizer.py
tests/: conftest.py
tests/integration/: test_api.py  test_pipeline.py
tests/unit/: test_board_utils.py  test_model.py  test_prompts.py  test_tactical.py  test_vectorizer.py
